# OS_lab

./: .gitignore  Makefile  OS_lab.code-workspace  README.md  os_env.sh  说明.md
env/: as  (+8 more)
os_lab3/: CMakeLists.txt  kbd.cpp  编译指令说明
os_lab3/report/: 实验报告.md
os_lab3/test/: '  .gdb_history  .gdbinit  .kernel_elf_dump.swo  .kernel_elf_dump.swp  CMakeLists.txt  Doxyfile  Makefile  bc_dump  bc_dump_elf  bochsrc  bochsrc_log  bochsrc_ubuntu  bx_enh_dbg.ini  cmos.ii  cmos.s  dump  gdbinit.part  jjj  kernel_bin_dump  kernel_elf_dump  linker.ld  objret  sys_io.ii  sys_io.s
os_lab3/test/basic_lib/: Makefrag  asm_lib.asm  base_lib.h  c_lib.c  c_lib.cpp  cmos.cpp  sys_io.cpp  sys_lib.h
os_lab3/test/boot/: Makefrag  bootloader.asm
os_lab3/test/driver/: Makefrag  cmos.cpp  kb.c  kb.h  vga.cpp  vga.h
os_lab3/test/include/: defines.h  pm.asm
os_lab3/test/kernel/: Makefrag  bin_loader.cpp  bin_loader.h  crti.S  crtn.S  ide.cpp  ide.h  kb.c  kb.h  kernel.cpp  kernel_main.cpp  kernel_start copy.S  kernel_start.S  kernel_test.cpp  pmtest2.asm  pmtest7.asm  sh.cpp  sh.h  tty.h
os_lab3/test/kernel_lib/: debug_printf.cpp  debug_printf.h  font_8x16.inc  gdt.cpp  gui.asm  idt.cpp  isr.cpp  isr.h  page.cpp  page.h  pm.h  pm.inc  pm_utility.asm  ram.cpp  sys_utility.cpp  sys_utility.h  sys_utility_asm.asm
os_lab3/test/libc/: '  Makefile  Makefrag  crt0.S  cstart.S  ctype.cpp  ctype.h  stdio.cpp  stdio.h  stdlib.cpp  stdlib.h  string.cpp  string.h  test  test.cpp  time.cpp  time.h  unistd.h
os_lab3/test/proc/: Makefrag  exec.h  init.asm  proc.cpp  proc.h  sys_proc.cpp  sys_proc.h
(+194 files in other folders)
